--- a/public/css/csFrame.css
+++ b/public/css/csFrame.css
@@ -81,8 +81,9 @@
 }
 .myButton1:active
 {
-    box-shadow: 0px 1px 0px 0px black;
-     transform: translateY(3px);
+    box-shadow: 0px 0px 0px 0px black;
+    transform: translateY(4px);
+    background:red;
 }
 .myButton1:focus
 {
@@ -90,8 +91,9 @@
 }
 .myButton2:active
 {
-    box-shadow: 0px 1px 0px 0px black;
-     transform: translateY(3px);
+    box-shadow: 0px 0px 0px 0px black;
+    transform: translateY(4px);
+    background:red;
 }
 .myButton2:focus
 {
